--- a/templates/user/register.html.twig
+++ b/templates/user/register.html.twig
@@ -5,16 +5,27 @@
 {% endblock %}
 
 {% block body %}
-    <section class="uk-section uk-section-small uk-section-primary">
-        <div class="uk-container">
-            <h2>Registrieren</h2>
+    <section id="header" class="py-5 bg-white">
+        <div class=" container-md">
+            <h1 class="display-4">{{ trans["register"] }}</h1>
         </div>
     </section>
-    <section class="uk-section uk-section-small uk-section-muted">
-        <div class="uk-container">
-            {{ flash.show|raw }}
+    <section id="body" class="py-3 container-md">
+        <div class="row">
+            <div class="col-md-6">
+                <h5>Neu hier?</h5>
+                <p>Registriere dich und genieße alle Vorteile unserer Website.</p>
+                {{ include('user/_register_form.html.twig') }}
+            </div>
+            <div class="col-md-6">
+                <h5>Bereits registriert?</h5>
+                <p>Logge dich ein, um Termine zu buchen und dein Konto einzusehen.</p>
+                <a href="{{ route('user/login') }}" class="">
+                    {{ trans["button"]["to login"] }}
+                </a>
+            </div>
+        </div>
+    </section>
 
-            {{ include('user/_register_form.html.twig') }}
-        </div>
-    </section>
+
 {% endblock %}
